# FTGaming

./: LICENSE
Projeto_FTGaming/: CMakeLists.txt  FT GAMING.dev  FT GAMING.layout  LICENSE  Makefile.win  README.md  cliente.c  cliente.h  interface.c  interface.h  main.c  produto.c  produto.h  struct.h  venda.c  venda.h
